Fixed bug with bottom image links not responding correctly on mobile devices

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -155,6 +155,9 @@
 	body .wc-gallery .wc-image-links .gallery-caption {
 		display: block;
 	}
+	body .wc-gallery .wc-image-links-bottomlinks {
+		margin: 0;
+	}
 }
 /**
  * Image Links
